# snackotron

./: Cargo.toml  init.sh  snackotron.db  snackotron.db.sql
src/: db_constants.rs  main.rs  model.rs  upc.rs
src/templates/: index.rs
templates/: index.html
