[package]
name = "snackotron"
version = "0.1.0"
authors = ["Dakota Williams <raineforest@raineforest.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

[dependencies.quaint]
version = "0.1"
default-features = false
features = ["single"]
