[package]
name = "snackotron"
version = "0.1.0"
authors = ["Dakota Williams <raineforest@raineforest.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
sqlx = { version = "0.4.2", features = [ "runtime-actix-native-tls", "sqlite" ] }
