[package]
name = "snackotron"
version = "0.1.0"
authors = ["Dakota Williams <raineforest@raineforest.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "3"
askama = "0"
dotenv = "0"
reqwest = { version = "0.10", features = [ "json" ] }
serde = "1"
serde_json = "1"
sqlx = { version = "0.4.2", features = [ "runtime-actix-native-tls", "postgres" ] }
